# undated

./: .gitignore  README.md  README.rst  pypi.cmd  release.cmd  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  pylint.yml  python_code_change.yml  unittest.yml
docs/: changes.rst  conf.py  fmts.rst  index.rst  tutorial.csv  tutorial.rst  undated.rst  utils.rst
src/tests/: test_add_days.py  test_add_months.py  test_as_iymd.py  test_day_of_week.py  test_epoch.py  test_first_last_days.py  test_fmts.py  test_is_leap_year.py  test_is_valid.py  test_months_between.py  test_quarter.py  test_weekdays.py
src/timings/: timing_add_days.py  timing_add_months.py  timing_add_weekdays.py  timing_as_ymd.py  timing_days_between.py  timing_quarter.py  timing_weekdays_between.py
src/undated/: __init__.py  _core.py  _data.py  _tools.py  fmts.py  utils.py
