[metadata]
name = undated
version = 0.0.2b
author = rikfair
author_email = mail4rik-pypi@yahoo.com
description = For when dates aren't dates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rikfair/undated
project_urls =
    Bug Tracker = https://github.com/rikfair/undated/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Database
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Office/Business :: Financial :: Spreadsheet
    Topic :: Text Processing :: General
    Topic :: Utilities
    
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    
[options.packages.find]
where = src
exclude =
	tests*
    timings*
